# scenescape

./: .gitignore  Makefile  REUSE.toml  api-reference.md  index.md  sources.Dockerfile  third-party-programs.txt  version.txt
.github/: copilot-instructions.md  dependabot.yml
.github/actions/cleanup/: action.yaml
.github/actions/setup-env/: action.yaml
.github/instructions/: documentation.md  python.md  testing.md
.github/resources/: .prettierignore  actionlint.yaml  bandit.config  coverity-requirements.txt  requirements.txt
.github/workflows/: auto-update.yml  bandit.yml  build-documentation.yml  clamav.yml  clean-runner.yml  codeql.yml  coverity.yml  docker-bench-security.yaml  docs-build.yml  gitleaks.yml  license.yml  lint.yml  scorecard.yml  tests-all.yml  tests-bat.yml  tracker-service.yaml  trivy.yml  update-dlstreamer.yml  weekly-build.yml  weekly-tests.yml  zizimor.yml
additional-resources/: convert-object-detections-to-normalized-image-space.md  how-to-upgrade.md  index.md
api-docs/: api.yaml
autocalibration/: Agents.md  Dockerfile  README.md
autocalibration/src/: auto_camera_calibration_controller.py  auto_camera_calibration_model.py  camcalibration-init
building-a-scene/: how-to-configure-geospatial-map-service-api-keys.md  how-to-create-new-scene.md  how-to-visualize-regions.md  index.md
calibrating-cameras/: how-to-autocalibrate-cameras-using-apriltags.md  how-to-autocalibrate-cameras-using-visual-features.md  how-to-manually-calibrate-cameras.md  index.md
cluster_analytics/: Agents.md  Dockerfile  Makefile  README.md  requirements-build.txt  requirements-runtime.txt
cluster_analytics/config/: config.json
cluster_analytics/docs/: toc.rst
cluster_analytics/src/: cluster_analytics.py  cluster_analytics_context.py  cluster_analytics_tracker.py
cluster_analytics/tools/: __init__.py
controller/: Agents.md  Dockerfile  Makefile  README.md  requirements-runtime.txt
controller/src/robot_vision/benchmarks/: CMakeLists.txt
controller/src/robot_vision/test/: CMakeLists.txt
dlstreamer-pipeline-server/: README.md  model_config.json  perf-config.json
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-controller-otel.md  0009-tracking-evaluation.md
docs/design/: tracker-service.md  vision-pipeline-overview.md
docs/user-guide/: getting-started-guide.md  index.md  support.md  system-requirements.md
kubernetes/: Makefile  README.md
kubernetes/scenescape-chart/: Chart.yaml  README.md  values.yaml
kubernetes/template/: kind-config.template  kind.template
manager/: Agents.md  Dockerfile  requirements-runtime.txt
manager/config/: 000-default.conf  scenescape-init  webserver-init
manager/test/: requirements-test.txt
manager/tools/: migration  upgrade-database
mapping/: Agents.md  Dockerfile  Makefile  requirements_api.txt
mapping/src/: api_service_base.py  mapanything_model.py  model_interface.py  vggt_model.py
mapping/tests/: README.md  test_api_service.py  test_model_interface.py
mapping/tools/: client_example.py
model_installer/: Dockerfile
model_installer/src/: README.md  copy-config-files  generate_model_config.py  install-omz-models
other-topics/: how-to-run-LPR-with-3D-object-detection.md  index.md
sample_data/: Retail.json  docker-compose-dl-streamer-example.yml  docker-compose-dls-perf.yml  docker-compose.vdms-override.yml
scene_common/: Dockerfile
tests/: Makefile  Makefile.functional  Makefile.perf  Makefile.sscape  Makefile.user_interface  README.md  config.coveragerc  mqtt_helper.py  runtest  test_utils.sh
tests/compose/: autocalibration.yml  camcalibration.yml  scene_no_db.yml  scene_no_ntp.yml  vdms.yml  web.yml  web_calibration.yml
tests/functional/: tc_auto_calibration_api.py  tc_delete_sensor_mqtt_api.py  tc_persistence_on_page_navigate_api.py  tc_persistence_on_restart_api.py  tc_scene_import_api.py  tc_scene_import_json.py
tests/kubernetes/: README.md
tests/perf_tests/: tc_scene_performance_full
tests/scripts/: build-time.py
tests/sscape_tests/: secrets.sh
tests/ui/: common_ui_test_utils.py  tc_3d_ui_calibration_points.py  tc_auto_calibration_ui.py  tc_camera_control_panel.py  tc_camera_intrinsics.py  tc_delete_sensor_mqtt.py  tc_live_button_works.py  tc_manual_camera_calibration.py  tc_persistence_on_page_navigate.py  tc_restricted_media_access.py  tc_scene_control_panel.py  tc_scene_import.py  tc_sensor_area.py  tc_view_3d_glb_file.py  userinterface.py
tools/: mqtt_recorder.py  scenescape-start  yaml_validator
tools/ppl_runner/: .gitignore  README.md  cam-settings-to-dlsps-config.py  docker-compose-ppl.yaml  start-dlsps-pipeline.sh  stop-dlsps-pipeline.sh
tracker/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
tracker/docs/: implementation.md
tracker/inc/: cli.hpp  config_loader.hpp  env_vars.hpp  healthcheck_command.hpp  healthcheck_server.hpp  logger.hpp  message_handler.hpp  mqtt_client.hpp  proxy_utils.hpp
tracker/schema/: config.schema.json  log.schema.json
tracker/src/: cli.cpp  config_loader.cpp  healthcheck_command.cpp  healthcheck_server.cpp  logger.cpp  main.cpp  message_handler.cpp  mqtt_client.cpp  proxy_utils.cpp
tracker/test/service/: .gitignore  conftest.py  docker-compose.test.yml  docker-compose.yaml  mosquitto.conf  otel-collector-config.yaml  requirements.txt  test_mqtt.py  test_shutdown.py  test_tracker_healthz.py  test_tracker_shutdown.py
tracker/test/service/utils/: certs.py  docker.py  generate_certs.py  schema.py
tracker/test/unit/: CMakeLists.txt  cli_test.cpp  config_loader_test.cpp  healthcheck_command_test.cpp  healthcheck_server_test.cpp  logger_test.cpp  message_handler_test.cpp  mqtt_client_test.cpp  proxy_utils_test.cpp
tracker/test/unit/utils/: json_schema_validator.hpp  scoped_env.hpp
tracker/test/utils/: json_schema_validator.hpp  test_sink.hpp
using-intel-scenescape/: how-to-deploy-scenescape-using-prebuilt-containers.md  how-to-integrate-cameras-and-sensors.md  how-to-use-3D-UI.md  tutorial.md  working-with-spatial-analytics-data.md
(+152 files in other folders)
